minor comment update lab 3

--- a/src/lab_03_classification.ipynb
+++ b/src/lab_03_classification.ipynb
@@ -107,7 +107,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#plot more easily n by 2 matrix (n vectors)\n",
+    "# Plot more easily n by 2 matrix (n vectors)\n",
     "def separateXY(matrix):\n",
     "    return matrix[:,0], matrix[:,1]"
    ]
@@ -139,8 +139,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Calculate skewness and kurtosis metrics for each \n",
-    "# dimension of each class\n",
+    "# Calculate skewness and kurtosis metrics for each dimension of each class\n",
     "labels = ['A_x', 'A_y', 'B_x', 'B_y', 'C_x', 'C_y']\n",
     "\n",
     "kurtosis_metrics = stats.kurtosis(np.concatenate([a, b, c], axis = 1), axis = 0)\n",
@@ -205,7 +204,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# calculate paramters of Gaussian\n",
+    "# Calculate paramters of Gaussian\n",
     "def get_coefficient(data):\n",
     "    temp_mean = data.mean(axis=0)\n",
     "\n",
@@ -247,7 +246,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# calculate the coefficient of quadratic term, primary term and constant term \n",
+    "# Calculate the coefficient of quadratic term, primary term and constant term \n",
     "# of x and y according to the equation above\n",
     "# in the end we round the coefficient to the closest integer\n",
     "def get_discriminant_curve_coeff(data_1, data_2):\n",
@@ -669,13 +668,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# hyper-parameters\n",
+    "# Hyper-parameters\n",
     "learning_rate = 0.01\n",
     "num_epoch = 16\n",
     "batch_size = 100\n",
     "display_step = 5       # display the avg cost after this number of epochs\n",
     "\n",
-    "# variables\n",
+    "# Variables\n",
     "batch_size = 100\n",
     "num_input = 784  \n",
     "num_hidden1 = 512\n",
@@ -711,11 +710,11 @@
    "source": [
     "s = tf.InteractiveSession()\n",
     "try:\n",
-    "    # trainum_input data and labels\n",
+    "    # Trainum_input data and labels\n",
     "    x = tf.placeholder('float', [None, num_input])     # training data\n",
     "    y = tf.placeholder('float', [None, num_output])    # labels\n",
     "\n",
-    "    # weights and biases\n",
+    "    # Weights and biases\n",
     "    weights = {\n",
     "        'w_h1' : tf.Variable(tf.random_normal([num_input, num_hidden1])),\n",
     "        'w_h2' : tf.Variable(tf.random_normal([num_hidden1, num_hidden2])),\n",
@@ -727,14 +726,14 @@
     "        'b_out': tf.Variable(tf.random_normal([num_output]))\n",
     "    }\n",
     "\n",
-    "    # construct the model\n",
+    "    # Construct the model\n",
     "    model = multi_layer_perceptron(x, weights, biases)\n",
     "\n",
-    "    # cost function and optimization\n",
+    "    # Cost function and optimization\n",
     "    loss_func = tf.reduce_mean(tf.nn.softmax_cross_entropy_with_logits_v2(logits = model, labels = y))\n",
     "    optimizer = tf.train.AdamOptimizer(learning_rate = learning_rate).minimize(loss_func)\n",
     "\n",
-    "    #%% Train and test\n",
+    "    # Train and test\n",
     "\n",
     "    sess = tf.Session()\n",
     "    init = tf.global_variables_initializer()\n",
